--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -49,14 +49,19 @@
 
                 <section class="cards">
                     <div class="card">
-                        <img src="../資源包1/Pictures/braden-jarvis-prSogOoFmkw-unsplash.jpg" alt="picture">
+                        <img src="../資源包1/Pictures/braden-jarvis-prSogOoFmkw-unsplash.jpg" 
+                        title="Hawaiian Islands Mountains"
+                        alt="picture">
+
                         <h4>Fast delivery</h4>
                         <p>We promise to deliver your ordered items within one working day. Available throughout the Hawaiian Islands. You order with confidence and we deliver on time!</p>
                         <a href="">Delivery location</a>
                     </div>
 
                     <div class="card">
-                        <img src="../資源包1/Pictures/sean-o-KMn4VEeEPR8-unsplash.jpg" alt="picture">
+                        <img src="../資源包1/Pictures/sean-o-KMn4VEeEPR8-unsplash.jpg" 
+                        title="Hawaii Beach" 
+                        alt="picture" >
                         <h4>Easy payment</h4>
                         <p>Credit cards, cash cards, cash and bank transfers, as well as other popular payment methods, are all available. See the link for more payment methods and options!</p>
                         <a href="">Learn more</a>
@@ -64,7 +69,9 @@
                     </div>
 
                     <div class="card">
-                        <img src="../資源包1/Pictures/tatonomusic-FFCgotROOTY-unsplash.jpg" alt="picture">
+                        <img src="../資源包1/Pictures/tatonomusic-FFCgotROOTY-unsplash.jpg" 
+                        title="Hawaiian Surfboard"
+                        alt="picture">
                         <h4>Variety</h4>
                         <p>Over 3,000 items are available for hire and all items are quality assured to guarantee your absolute satisfaction</p>
                         <a href="">Online search</a>
